# AIA_Practica5

./: .gitignore  README.md  env_template  main.py  pyproject.toml
test/: anonymization_test.py  security_test.py
utils/: __init__.py
utils/agent/: F_Decision_Graph_Agent.py  F_Linear_Graph_Agent.py  F_Tools_Graph_Agent.py  __init__.py
utils/builder/: F_Knowledge_Builder.py
utils/downloader/: F_Data_Downloader.py
utils/searcher/: F_Semantic_Searcher.py
utils/security/: F_anonymizer.py  F_prompt_injection.py
