[project]
name = "aia-practica5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "cryptography>=47.0.0",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "kagglehub>=1.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
]
